added exit and continue buttons

--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
             <div class="info">4. You have to finish the quiz once started.</div>
             <div class="info">5. Gain the highest score by answering all the questions correctly!</div>
         </div>
+        <div class="buttons">
+            <button class="quit">Exit Quiz</button>
+            <button class="restart">Continue</button>
+        </div>
     </div>
 
 </body>
