--- a/index.html
+++ b/index.html
@@ -29,5 +29,45 @@
         </div>
     </div>
 
+    <!-- Quiz Questions -->
+    <div class="quiz_box">
+        <header>
+            <div class="title">Ultimate JavaScript Quiz</div>
+            <div class="timer">
+                <div class="time_text">Time Remaining</div>
+                <div class="timer_sec">20</div>
+            </div>        
+        </header>
+        <section>
+            <div class="que_text">
+                <span>Inside which HTML element do we put the JavaScript?</span>
+            </div>
+            <div class="option_list">
+                <div class="option">
+                    <span>Script</span>
+                    <div class="icon tick"><i class="fas fa-check"></i></div>
+                </div>
+                <div class="option">
+                    <span>JS</span>
+                    <div class="icon cross"><i class="fas fa-times"></i></div>
+                </div>
+                <div class="option">
+                    <span>JavaScript</span>
+                </div>
+                <div class="option">
+                    <span>Scripting</span>
+                </div>
+            </div>
+        </section>
+
+        <!-- Quiz Questions Footer -->
+        <footer>
+            <div class="total_que">
+                <span><p>2</p><p>Of</p><p>5</p>Questions</span>
+            </div>
+            <button class="next-btn">Next Question</button>
+        </footer>
+    </div>
+
 </body>
 </html>
