--- a/game.html
+++ b/game.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ultimate JavaScript Quiz</title>
     <link rel="stylesheet" href="./assets/style.css">
-    <link rel="stylesheet" href="game.css">
+    <link rel="stylesheet" href="./assets/game.css">
 </head>
 <body>
     <div class="container">
