finished highScores pages

--- a/highscores.html
+++ b/highscores.html
@@ -17,5 +17,6 @@
             <a href="/" class="btn">Go Home<i class="fas fa-home"></i></a>
         </div>
     </div>
+    <script src="./assets/highscores.js"></script>
 </body>
 </html>
