--- a/end.html
+++ b/end.html
@@ -21,5 +21,6 @@
             <a href="./index.html" class="btn">Go Back Home<i class="fas fa-home"></i></a>
         </div>
     </div>
+    <script src="./assets/end.js"></script>
 </body>
 </html>
