--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <div class="container">
         <div id="home" class="flex-column flex-center">
             <h1>Who will be Victorious?</h1>
-            <a href="/game.html" class="btn">Start</a>
-            <a href="/highscore.html" id="highscore-btn" class="btn">High Score<i class="fas fa-crown"></i></a>
+            <a href="./game.html" class="btn">Start</a>
+            <a href="./highscores.html" id="highscore-btn" class="btn">High Score<i class="fas fa-crown"></i></a>
         </div>
     </div>
 
