--- a/end.html
+++ b/end.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>END GAME</title>
     <link rel="stylesheet" href="./assets/style.css">
     <script src="https://kit.fontawesome.com/6b26852f8b.js" crossorigin="anonymous"></script>
 </head>
